feat: refactorisation code + revue un peu css + dossier shared pour logo + component quiz-list-user v005